[fix #1013] fix logo on ie11

--- a/app/assets/stylesheets/new_design/procedure_list.scss
+++ b/app/assets/stylesheets/new_design/procedure_list.scss
@@ -26,13 +26,11 @@
   }
 
   .procedure-logo {
+    @include ie-compatible-background-image();
+
     height: 93px;
     width: 93px;
     margin-right: 3 * $default-spacer;
-    flex-shrink: 0;
-    background-image: url("your/url/here");
-    background-size: contain;
-    background-repeat: no-repeat;
     background-position: 95% 50%;
   }
 
